--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -1,4 +1,6 @@
 {% templatetag openblock %} load staticfiles {% templatetag closeblock %}
+{% load static %} <!-- New line -->
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
